# python-graphql

./: .gitignore  app.py  pyproject.toml
python_graphql/: __init__.py  models.py  queries.py
