[tool.poetry]
name = "python-graphql"
version = "0.1.0"
description = ""
authors = ["Anand <anandsamra55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
ariadne = "^0.26.2"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^6.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
